Ajout de la librairie TaskScheduler

--- a/Vehicule/Programmes/ESPvehicule/platformio.ini
+++ b/Vehicule/Programmes/ESPvehicule/platformio.ini
@@ -13,5 +13,5 @@ platform = espressif32
 board = featheresp32
 framework = arduino
 lib_extra_dirs = ~/Documents/Arduino/libraries
-
 monitor_speed = 115200
+lib_deps = arkhipenko/TaskScheduler@^3.7.0
