mode station com tour

--- a/Intermediaire/Programme/Tour com esp station/platformio.ini
+++ b/Intermediaire/Programme/Tour com esp station/platformio.ini
@@ -15,3 +15,4 @@ framework = arduino
 lib_extra_dirs = ~/Documents/Arduino/libraries
 monitor_speed = 115200
 lib_deps = arkhipenko/TaskScheduler@^3.7.0
+upload_port = COM6
