--- a/Poste-De-Commande/Programmes/PC/CommandCenter/CommandCenter.csproj
+++ b/Poste-De-Commande/Programmes/PC/CommandCenter/CommandCenter.csproj
@@ -77,6 +77,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserInfos.cs" />
     <EmbeddedResource Include="Form1.en.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -527,6 +528,16 @@
     <None Include="Icons\Applications\Play\Play_Inactive_Filled.png" />
     <None Include="Icons\Applications\Play\Play_Warning_Empty.png" />
     <None Include="Icons\Applications\Play\Play_Warning_Filled.png" />
+    <None Include="Icons\Saving\Save_Active_Empty.png" />
+    <None Include="Icons\Saving\Save_Active_Filled.png" />
+    <None Include="Icons\Saving\Save_Disabled_Empty.png" />
+    <None Include="Icons\Saving\Save_Disabled_Filled.png" />
+    <None Include="Icons\Saving\Save_Error_Empty.png" />
+    <None Include="Icons\Saving\Save_Error_Filled.png" />
+    <None Include="Icons\Saving\Save_Inactive_Empty.png" />
+    <None Include="Icons\Saving\Save_Inactive_Filled.png" />
+    <None Include="Icons\Saving\Save_Warning_Empty.png" />
+    <None Include="Icons\Saving\Save_Warning_Filled.png" />
     <Content Include="Settings.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
