--- a/Intermediaire/Programme/Tour com esp/platformio.ini
+++ b/Intermediaire/Programme/Tour com esp/platformio.ini
@@ -15,3 +15,5 @@ framework = arduino
 lib_extra_dirs = ~/Documents/Arduino/libraries
 monitor_speed = 115200
 lib_deps = arkhipenko/TaskScheduler@^3.7.0
+;upload_port = COM[7]
+;monitor_port = COM[7]
