--- a/Poste-De-Commande/Programmes/PC/CommandCenter/CommandCenter.csproj
+++ b/Poste-De-Commande/Programmes/PC/CommandCenter/CommandCenter.csproj
@@ -53,6 +53,9 @@
     <Compile Include="BeagleBone_Processes.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Calibration.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="CAN.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -72,11 +75,17 @@
     <Compile Include="Form1_Settings.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Maintenance.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Operation.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Technician.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="UserInfos.cs" />
     <EmbeddedResource Include="Form1.en.resx">
       <DependentUpon>Form1.cs</DependentUpon>
