--- a/Poste-De-Commande/Programmes/PC/CommandCenter/CommandCenter.csproj
+++ b/Poste-De-Commande/Programmes/PC/CommandCenter/CommandCenter.csproj
@@ -59,6 +59,7 @@
     <Compile Include="CAN.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="EN_UserInfos.cs" />
     <Compile Include="Form1_Terminal.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -75,6 +76,7 @@
     <Compile Include="Form1_Settings.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="FR_UserInfos.cs" />
     <Compile Include="Maintenance.cs">
       <SubType>Form</SubType>
     </Compile>
